istio_essentials/demo/routing/3.- egress/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ack8storm-gw
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: https
      protocol: HTTPS
    hosts:
    - ackstorm.com
    - www.ackstorm.com
    tls:                 # <- from here down can be omitted, if mTLS is disabled
      mode: MUTUAL
      serverCertificate: /etc/certs/cert-chain.pem
      privateKey: /etc/certs/key.pem
      caCertificates: /etc/certs/root-cert.pem

# NO mTLS option
#
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: istio-egressgateway
# spec:
#   selector:
#     istio: egressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - ackstorm.com
#     - www.ackstorm.com
#
