istio_essentials/demo/routing/3.- egress/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ack8storm-dr
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: ack8storm
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: ackstorm.com
          
# NO mTLS option
#
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: ack8storm-dr
# spec:
#   host: istio-egressgateway.istio-system.svc.cluster.local
#   subsets:
#   - name: ack8storm
#
