istio_essentials/demo/routing/3.- egress/se-alpine.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-alpinelinux
spec:
  hosts:
  - "*.alpinelinux.org"
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: NONE
